# waterfall

./: Cargo.toml  README.md  TODO
examples/: config.json  config_wfw.json  config_wfw_multiple.json  long_world.json  wfd.json  world.json
src/: calendar.rs  interval.rs  interval_set.rs  lib.rs  prelude.rs  requirement.rs  resource_interval.rs  runner.rs  schedule.rs  task.rs  task_set.rs  varmap.rs  world.rs
src/executors/: agent_executor.rs  local_executor.rs  mod.rs
src/storage/: memory.rs  mod.rs  noop.rs  redis.rs  redis_store.rs
webui/: README.md  index.html  package-lock.json  package.json
webui/poc/: app.js  index.html
webui/public/: daggyd.css  waterfall.css
webui/src/: App.vue  defs.js
webui/src/components/: GlobalSettings.vue  RunDetails.vue  RunExplorer.vue  RunList.vue  SegmentDetails.vue  SortableTableHeader.vue  TaskDetails.vue  Timeline.vue
